--- a/config/messages/app.properties
+++ b/config/messages/app.properties
@@ -2,11 +2,30 @@ app.title=Calories management
 app.home=Home
 app.footer=Project <a href\="https\://github.com/JavaOPs/topjava" target\=_blank>Maven/ Spring/ Security/ JPA(Hibernate)/ Jackson/jQuery</a> application
 app.login=Login as
+
 users.title=Users
 users.name=Name
 users.email=Email
 users.roles=Roles
 users.active=Active
 users.registered=Registered
+
 meals.title=Meals
+meals.fromdate=From Date
+meals.fromtime=From Time
+meals.todate=To Date
+meals.totime=To time
+meals.filter=Filter
+meals.addmeal=Add Meal
+meals.update=Update
+meals.delete=Delete
+
+meal.save=Save
+meal.cancel=Cancel
+meal.titlecreate=Create Meal
+meal.titleupdate=Edit Meal
+
 common.select=Select
+common.datetime=DateTime
+common.description=Description
+common.calories=Calories
