--- a/config/messages/app.properties
+++ b/config/messages/app.properties
@@ -2,6 +2,7 @@ app.title=Calories management
 app.home=Home
 app.footer=Project <a href="https://github.com/JavaOPs/topjava" target=_blank>Maven/ Spring/ Security/ JPA(Hibernate)/ Jackson/jQuery</a> application
 app.login=Login as
+
 users.title=Users
 users.edit=Edit user
 users.add=Add user
@@ -10,5 +11,22 @@ users.email=Email
 users.roles=Roles
 users.active=Active
 users.registered=Registered
+users.password=Password
+
 meals.title=Meals
+meals.edit=Edit meal
+meals.add=Add meal
+meals.filter=Filter
+meals.startDate=From date
+meals.endDate=To date
+meals.startTime=From time
+meals.endTime=To time
+meals.description=Description
+meals.dateTime=DateTime
+meals.calories=Calories
+
 common.select=Select
+common.delete=Delete
+common.update=Update
+common.save=Save
+common.cancel=Cancel
