--- a/config/messages/app.properties
+++ b/config/messages/app.properties
@@ -24,7 +24,7 @@ meals.endTime=To time
 meals.description=Description
 meals.dateTime=DateTime
 meals.calories=Calories
-
+common.add=Add
 common.select=Select
 common.delete=Delete
 common.update=Update
