--- a/config/messages/app.properties
+++ b/config/messages/app.properties
@@ -23,9 +23,8 @@ meals.description=Description
 meals.dateTime=DateTime
 meals.calories=Calories
 common.add=Add
-common.select=Select
-common.deleted=Deleted
-common.saved=Saved
-common.enabled=Enabled
-common.disabled=Disabled
+common.deleted=Record deleted
+common.saved=Record saved
+common.enabled=Record enabled
+common.disabled=Record disabled
 common.errorStatus=Error status
