--- a/config/messages/app.properties
+++ b/config/messages/app.properties
@@ -32,3 +32,5 @@ common.saved=Record saved
 common.enabled=Record enabled
 common.disabled=Record disabled
 common.errorStatus=Error status
+users.dublicateEmail=User with this email already exists
+meals.dublicateDate=Meal with such date and time already exists
